<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/profileContainer"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".views.home.ProfileFragment">

  <TextView
    android:id="@+id/message"
    android:textStyle="bold"
    android:textColor="@color/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:text="Update profile"
    android:textAllCaps="true"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.362"
    app:layout_constraintStart_toStartOf="@+id/profileFirstName"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.091"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/profileFirstName"
    android:layout_width="300dp"
    android:textColor="@color/colorPrimary"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="First Name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/profileFirstNameField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/profileLastName"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Last Name"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="@+id/profileFirstName"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/profileFirstName"
    app:layout_constraintTop_toBottomOf="@+id/profileFirstName">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/profileLastNameField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/profileEmail"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Email"
    app:layout_constraintEnd_toEndOf="@+id/profileFirstName"
    app:layout_constraintStart_toStartOf="@+id/profileFirstName"
    app:layout_constraintTop_toBottomOf="@+id/profileLastName">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/profileEmailField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/profilePassword"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:layout_marginTop="16dp"
    android:hint="Password"
    app:layout_constraintEnd_toEndOf="@+id/profileFirstName"
    app:layout_constraintStart_toStartOf="@+id/profileFirstName"
    app:layout_constraintTop_toBottomOf="@+id/profileEmail">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/profilePasswordField"
      android:layout_width="match_parent"
      android:inputType="textPassword"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/updateProfile"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:text="Update Profile"
    android:textStyle="bold"
    android:textColor="#FFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/profileFirstName"
    app:layout_constraintStart_toStartOf="@+id/profileFirstName"
    app:layout_constraintTop_toBottomOf="@+id/profilePassword"/>

</android.support.constraint.ConstraintLayout>