<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/addScheduleContainer"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".views.home.AddScheduleFragment">

  <TextView
    android:id="@+id/textView2"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="Book Yout Trip"
    android:textSize="24sp"
    android:textAllCaps="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.032"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/tripFrom"
    android:layout_width="300dp"
    android:layout_height="51dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="8dp"
    android:hint="From"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.0">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/tripFromField"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/tripTo"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:hint="To"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/tripFrom"
    app:layout_constraintStart_toStartOf="@+id/tripFrom"
    app:layout_constraintTop_toBottomOf="@+id/tripFrom"
    app:layout_constraintVertical_bias="0.0">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/tripToField"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/departureDate"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:hint="Date"
    android:textColor="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/tripTo"
    app:layout_constraintStart_toStartOf="@+id/tripTo"
    app:layout_constraintTop_toBottomOf="@+id/tripTo"
    app:layout_constraintVertical_bias="0.0">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/departureDateField"
      android:textColor="@color/colorPrimary"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/departureTime"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:hint="Time"
    android:textColor="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/departureDate"
    app:layout_constraintStart_toStartOf="@+id/departureDate"
    app:layout_constraintTop_toBottomOf="@+id/departureDate"
    app:layout_constraintVertical_bias="0.0">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/departureTimeField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="match_parent"/>
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/continueBookingButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:text="Continue"
    android:textStyle="bold"
    android:textColor="#FFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/departureTime"
    app:layout_constraintStart_toStartOf="@+id/departureTime"
    app:layout_constraintTop_toBottomOf="@+id/departureTime"/>

</android.support.constraint.ConstraintLayout>