<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/profile"
      android:icon="@drawable/ic_account"
      android:title="Profile"/>
    <item
      android:id="@+id/recentSchedules"
      android:icon="@drawable/ic_library_books"
      android:title="Recent Schedules"/>
    <item
      android:id="@+id/addSchedule"
      android:icon="@drawable/ic_library_add"
      android:title="Book A Ride"/>
  </group>

</menu>
